--- a/VayCayPlannerWeb/Views/Destinations/Create.cshtml
+++ b/VayCayPlannerWeb/Views/Destinations/Create.cshtml
@@ -12,17 +12,16 @@
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
+            
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="card" style="width: 18rem;">
-                <div class="card-header">
-                    Your Trips
-                </div>
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item">An item</li>
-
-                </ul>
+            <div class="form-group">
+                <label asp-for="TripId" class="control-label"></label>
+                <select asp-for="TripId" asp-items="Model?.Trips" class="form-select">
+                    <option>Select Trip</option>
+                </select>
+                <span asp-validation-for="TripId" class="text-danger"></span>
             </div>
-
+            <br/>
             <div class="form-group">
                 <label asp-for="CityName" class="control-label"></label>
                 <input asp-for="CityName" class="form-control" />
@@ -42,11 +41,6 @@
                 <label asp-for="DepartureDate" class="control-label"></label>
                 <input asp-for="DepartureDate" class="form-control" />
                 <span asp-validation-for="DepartureDate" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Duration" class="control-label"></label>
-                <input asp-for="Duration" class="form-control" />
-                <span asp-validation-for="Duration" class="text-danger"></span>
             </div>
             <div class="form-group form-check">
                 <label class="form-check-label">
@@ -71,7 +65,7 @@
                 <input type="hidden" name="Name"/>
                 <span asp-validation-for="TripId" class="text-danger"></span>
             </div>*@
-
+            <br />
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
