--- a/VayCayPlannerWeb/Views/Trips/Create.cshtml
+++ b/VayCayPlannerWeb/Views/Trips/Create.cshtml
@@ -1,5 +1,5 @@
 ﻿@*@model VayCayPlannerWeb.Data.Models.Trip*@
-@model VayCayPlannerWeb.Models.ViewModels.Trip_vm
+@model VayCayPlannerWeb.Models.ViewModels.CreateTrip_vm
 
 @{
     ViewData["Title"] = "Create+";
@@ -13,6 +13,15 @@
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="form-group">
+                <label asp-for="TravelGroupId" class="control-label"></label>
+                <select asp-for="TravelGroupId" asp-items="Model?.TravelGroups" class="form-select">
+                    <option>Select Travel Group</option>
+                </select>
+                <span asp-validation-for="TravelGroupId" class="text-danger"></span>
+            </div>
+            <br />
+            
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
@@ -33,7 +42,7 @@
                 <input asp-for="EndDate" class="form-control" />
                 <span asp-validation-for="EndDate" class="text-danger"></span>
             </div>
-
+            <br />
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
