--- a/VayCayPlannerWeb/Views/Trips/CreateFirstTrip.cshtml
+++ b/VayCayPlannerWeb/Views/Trips/CreateFirstTrip.cshtml
@@ -1,4 +1,4 @@
-﻿@model VayCayPlannerWeb.Models.ViewModels.CreateNewTrip_vm
+﻿@model VayCayPlannerWeb.Models.ViewModels.CreateFirstTrip_vm
 
 @{
     ViewData["Title"] = "CreateNewTrip";
@@ -24,7 +24,7 @@
                 <span asp-validation-for="GroupName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" name="SubscriberEmail" asp-controller="Trips" asp-action="CreateNewTrip" class="btn btn-primary" />
+                <input type="submit" value="Create" name="SubscriberEmail" asp-controller="Trips" asp-action="CreateFirstTrip" class="btn btn-primary" />
             </div>
             <button data-id="SubscriberEmail" class="btn btn-primary createTripBtn" asp-route-id="@User.Identity?.Name" type="button">Create Trip</button>
  
